Dark mode: fix sweet alert background

--- a/static/src/components/index.scss
+++ b/static/src/components/index.scss
@@ -58,4 +58,9 @@
         border: var(--bs-border-width) solid var(--bs-border-color);
         border-radius: var(--bs-border-radius);
     }
+
+    /* Sweetalert selectors */
+    .sweet-alert {
+        background-color: var(--bs-body-bg);
+    }
 }
